tests/Fixtures/views/errors/included_broken.tpl
<section>
  <p>partial line two</p>
  <p>{$nope->boom()}</p>
</section>
